# PX4-Autopilot-pjanuszewski

./: .gitmodules  CMakeLists.txt  LICENSE_2  Makefile  README.md
ROMFS/px4fmu_common/init.d/: rc.mc_apps
boards/px4/sitl/: default.px4board
src/examples/fly_mission/: Kconfig  fly_mission.cpp
src/examples/fly_mission/.cache/clangd/index/: fly_mission.cpp.D0F827DD0A57C572.idx
src/examples/lqr_app/: CMakeLists.txt  Kconfig  lqr_app.cpp
src/examples/lqr_app_task/: CMakeLists.txt  Kconfig  lqr_app_task.cpp  lqr_app_task.hpp
src/examples/px4_simple_app/: CMakeLists.txt  px4_simple_app.c  px4_simple_app.cpp
src/examples/takeoff_and_land/.cache/clangd/index/: takeoff_and_land.cpp.AB6E5C5BB903001F.idx
src/lib/: CMakeLists.txt
src/lib/ct/: CMakeLists.txt
src/lib/lqr/: CMakeLists.txt  LQR-impl.hpp
src/lib/rate_control/: CMakeLists.txt  K_value.csv  K_value.txt  rate_control.cpp  rate_control.hpp
src/modules/fw_rate_control/: CMakeLists.txt
src/modules/lqr_module/: CARE-impl.hpp  CMakeLists.txt  K_matrix.csv  Kconfig  LQR-impl.hpp  LQR.hpp  declarations_quaternion.hpp  load_log.py  log_4_2024-5-7-19-11-09_vehicle_angular_velocity_0.csv  log_data.py  log_data_interpolated.csv  lqrCostQuaternion.info  lqr_module.hpp  lqr_module_main.cpp  lqr_quaternion.cpp  lqr_quaternion.hpp  vehicle_angular_velocity.csv
src/modules/mc_att_control/: CARE.hpp  CMakeLists.txt  K_matrix.csv  LQR.hpp  mc_att_control.hpp  mc_att_control_main.cpp  mc_att_lqr.cpp  mc_att_lqr.hpp
src/modules/mc_rate_control/: CMakeLists.txt  MulticopterRateControl.cpp  MulticopterRateControl.hpp
src/modules/mc_rate_control_lqr/: Multicopter_LQR_RateControl.cpp
src/modules/simulation/simulator_sih/: lqr_discrete.py  sih_params.c
